--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -42,5 +42,16 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data/
 
+  nginx:
+    container_name: nginx
+    image: nginx:alpine
+    depends_on:
+      - api
+      - client
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
+    ports:
+      - "3040:80"
+
 volumes:
   postgres_data:
