--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -11,6 +11,7 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data/
       - ./sql/generated.sql:/docker-entrypoint-initdb.d/generated.sql
+    restart: always
 
   backend:
     build:
@@ -24,6 +25,7 @@ services:
       - PRIVATE_KEY=${PRIVATE_KEY}
     depends_on:
       - postgres
+    restart: always
 
   frontend:
     build:
@@ -44,6 +46,7 @@ services:
       - "3000:3000"
     depends_on:
       - backend
+    restart: always
 
   nginx:
     container_name: nginx
@@ -55,6 +58,7 @@ services:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf
     ports:
       - "3040:80"
+    restart: always
 
 volumes:
   postgres_data: {}
