--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -18,8 +18,6 @@ services:
       context: ./easy-cards-express
       dockerfile: Dockerfile.production
     container_name: backend
-    ports:
-      - 9000:9000
     environment:
       - DATABASE_URL=${DATABASE_URL}
       - PRIVATE_KEY=${PRIVATE_KEY}
@@ -42,8 +40,6 @@ services:
       - AUTH_TRUST_HOST=${AUTH_TRUST_HOST}
       - AUTH_URL=${AUTH_URL}
     container_name: frontend
-    ports:
-      - "3000:3000"
     depends_on:
       - backend
     restart: always
@@ -56,9 +52,20 @@ services:
       - frontend
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf
+      - ./certbot/conf:/etc/letsencrypt
+      - ./certbot/www:/var/www/certbot
     ports:
-      - "3040:80"
+      - "80:80"
+      - "443:443"
     restart: always
+
+  certbot:
+    image: certbot/certbot:latest
+    container_name: certbot
+    volumes:
+      - ./certbot/conf:/etc/letsencrypt
+      - ./certbot/www:/var/www/certbot
+    command: certonly --webroot -w /var/www/certbot --keep-until-expiring --email robertssun1234@gmail.com -d easyflashcards.org --agree-tos
 
 volumes:
   postgres_data: {}
