--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
   backend:
     build:
       context: ./easy-cards-express
-      dockerfile: Dockerfile
+      dockerfile: Dockerfile.production
     container_name: backend
     environment:
       - DATABASE_URL=${DATABASE_URL}
@@ -26,13 +26,12 @@ services:
   frontend:
     build:
       context: ./easy-cards
-      dockerfile: Dockerfile
+      dockerfile: Dockerfile.production
     environment:
       - AUTH_GOOGLE_ID=${AUTH_GOOGLE_ID}
       - AUTH_GOOGLE_SECRET=${AUTH_GOOGLE_SECRET}
       - NEXT_PUBLIC_API_URL=${NEXT_PUBLIC_API_URL}
       - NEXT_PUBLIC_CLIENT_TO_API_URL=${NEXT_PUBLIC_CLIENT_TO_API_URL}
-      - REDIRECT_URI=${REDIRECT_URI}
       - AUTH_SECRET=${AUTH_SECRET}
       - PRIVATE_KEY=${FRONTEND_PRIVATE_KEY}
       - AUTH_TRUST_HOST=${AUTH_TRUST_HOST}
@@ -40,6 +39,18 @@ services:
     container_name: frontend
     depends_on:
       - backend
+
+  nginx:
+    container_name: nginx
+    image: nginx:alpine
+    depends_on:
+      - backend
+      - frontend
+    volumes:
+      - ./nginx/nginx.development.conf:/etc/nginx/nginx.conf
+    ports:
+      - "80:80"
+      - "443:443"
 
 volumes:
   postgres_data: {}
