--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -64,7 +64,7 @@ services:
     volumes:
       - ./certbot/conf:/etc/letsencrypt
       - ./certbot/www:/var/www/certbot
-    command: certonly --webroot -w /var/www/certbot --keep-until-expiring --email robertssun1234@gmail.com -d easyflashcards.org --agree-tos
+    command: certonly --webroot -w /var/www/certbot --keep-until-expiring --email ${EMAIL} -d ${DOMAIN} --agree-tos
 
 volumes:
   postgres_data: {}
